# capture-device-support

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
SampleCode/: DriverInterface.cpp  DriverInterface.h  main.cpp
